--- a/.github/workflows/minitest.yml
+++ b/.github/workflows/minitest.yml
@@ -10,6 +10,7 @@ jobs:
         with:
           ruby-version: 3.2
           bundler-cache: true
+      - name: Install dependencies
+        run: bundle install
       - name: Run tests
-        run: |
-          rails test
+        run: rails test
