--- a/.github/workflows/minitest.yml
+++ b/.github/workflows/minitest.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Install dependencies
         run: bundle install
       - name: Run tests
-        run: rails test
+        run: bundle exec rails test
