--- a/.github/workflows/minitest.yml
+++ b/.github/workflows/minitest.yml
@@ -3,6 +3,13 @@ on: [push]
 jobs:
   run-minitest:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:11.6-alpine
+        env:
+          POSTGRES_PASSWORD: password
+        ports:
+          - 5432:5432
     steps:
       - uses: actions/checkout@v2
       - name: Set up Ruby
