--- a/test/dummy/config/database.yml
+++ b/test/dummy/config/database.yml
@@ -10,6 +10,7 @@ default: &default
   host: 127.0.0.1
   username: postgres
   password: postgres
+  port: 5435
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
