--- a/.github/workflows/codecheck.yml
+++ b/.github/workflows/codecheck.yml
@@ -2,7 +2,7 @@
 name: Code Quality
 on: [push]
 jobs:
-  run-minitest:
+  run-codechec:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
